WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100354
[EFL][WK2] JavaScript popups are not focused when opened
https://bugs.webkit.org/show_bug.cgi?id=100354
Summary
[EFL][WK2] JavaScript popups are not focused when opened
Sudarsana Nagineni (babu)
Reported
2012-10-25 01:46:27 PDT
Right now the focus stays on webview when alert / confirm / prompt popups are opened and it's an incorrect behavior. We should move focus to the popup so that it allow us to input key events by default.
Attachments
Patch
(2.31 KB, patch)
2012-10-25 02:21 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-10-25 02:21:26 PDT
Created
attachment 170594
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-25 04:58:04 PDT
Comment on
attachment 170594
[details]
Patch Clearing flags on attachment: 170594 Committed
r132471
: <
http://trac.webkit.org/changeset/132471
>
WebKit Review Bot
Comment 3
2012-10-25 04:58:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug