[EFL][WK2] JavaScript popups are not focused when opened https://bugs.webkit.org/show_bug.cgi?id=100354

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-25
Reviewed by Kenneth Rohde Christiansen.

Move focus to the JavaScript popups when opened so that the key events
are forwarded to the popups instead of web view.

* MiniBrowser/efl/main.c:
(on_javascript_alert):
(on_javascript_confirm):
(on_javascript_prompt):

Canonical link: https://commits.webkit.org/118385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132471 268f45cc-cd09-0410-ab3c-d52691b4dbfc